[package]
name = "arcbox-agent"
description = "Guest agent for ArcBox VMs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "arcbox-agent"
path = "src/main.rs"

[dependencies]
arcbox-protocol = { workspace = true }
arcbox-constants = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true, features = ["mount", "process", "sched", "signal", "feature", "term"] }
libc = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
hostname = { workspace = true }
notify = "7"
tokio-stream = { workspace = true }
async-trait = { workspace = true }
pin-project-lite = { workspace = true }
tokio-util = "0.7"
flate2 = "1"
tar = "0.4"
num_cpus = "1"

# vsock is Linux-only
[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.5"

[dev-dependencies]
tempfile = "3"

[features]
default = []
engine-native = []
engine-docker-supervisor = []
provision-bundled = []
provision-distro = []

# When building for the guest VM (Linux), vsock is fully functional.
# On macOS host, we provide stubs for development/testing.
