[workspace]
members = ["vmm-core", "vmm-grpc", "vmm-daemon", "vmm-cli"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["ArcBox Labs <oss@arcbox.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcbox-labs/firecracker-vmm"

[workspace.dependencies]
vmm-core = { path = "vmm-core" }
vmm-grpc = { path = "vmm-grpc" }
fc-sdk    = { path = "../firecracker-client/fc-sdk" }

tonic            = { version = "0.12", features = ["transport"] }
tonic-build      = "0.12"
prost            = "0.13"
tokio            = { version = "1", features = ["full"] }
tokio-stream     = "0.1"
thiserror        = "2"
anyhow           = "1"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
uuid             = { version = "1", features = ["v4"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap             = { version = "4", features = ["derive", "env"] }
tower            = "0.4"
hyper-util       = { version = "0.1", features = ["tokio"] }
nix              = { version = "0.29", features = ["net", "ioctl"] }
libc             = "0.2"
chrono           = { version = "0.4", features = ["serde"] }
toml             = "0.8"
