[package]
name = "arcbox-snapshot"
description = "Snapshot and restore functionality for ArcBox Pro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
lz4_flex = "0.11"
arcbox-hypervisor = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }

[features]
default = []
criu = []
