[package]
name = "arcbox-protocol"
description = "Protocol definitions for ArcBox (ttrpc/protobuf)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
prost = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []

[lints]
workspace = true
